Dto for all events.Api and Users.Api, List of EventDto with profiles method added. DI NSwag Client realisaton, some fixes
